# cpp-chess-qt

./: BasicFigure.cpp  BasicFigure.h  Basic_figure.cpp  Basic_figure.h  CMakeLists.txt  LICENSE  README.md  bishop.cpp  bishop.h  board.cpp  board.h  config.cpp  config.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  mainwindow.cpp  mainwindow.h  pawn.cpp  pawn.h  queen.cpp  queen.h  resources.qrc  rook.cpp  rook.h
tests/: test_main.cpp
